# challenges

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  execute  pyproject.toml  setup.sh
docs/: challenge.txt
src/: initial_data.py  test.sqlite
src/alembic/: env.py
src/alembic/versions/: 1f7403127595_first_migrate.py  7e8babd01f30_first_migrate.py  b6fbed75b38c_first_migration.py  bf53f17f5529_first_migration.py  f452508edf22_first_migrate.py
src/app/: initial_data.py  main.py
src/app/core/: import_transactions.py  notify_transactions_summary.py  transactions_summary.py
src/app/crud/: __init__.py  crud_account.py  crud_base.py  crud_import_file.py  crud_transaction.py  crud_transactions.py
src/app/models/: __init__.py  account.py  import_file.py  transaction.py
src/app/schemas/: __init__.py  schema_account.py  schema_import_file.py  schema_summary.py  schema_transaction.py
src/app/services/: aws_service.py  email_service.py
src/app/tests/: conftest.py
src/app/utils/: __init__.py  calendar.py
src/config/: config.py
src/crud/: base.py  crud_account.py  crud_transactions.py
src/db/: base_model.py  init_db.py  session.py  test.sqlite  tests_db.sqlite
src/models/: account.py  transaction.py
src/schemas/: account.py  schema_account.py  schema_transaction.py  transaction.py
src/static_root/accounts/: initial_accounts.csv
src/static_root/transactions/: transactions_202306.csv  transactions_202307.csv  transactions_202308.csv  (+2 more)
static_root/transactions/: transactions_consolidated.csv
(+8 files in other folders)
