[tool.poetry]
name = "challenges"
version = "0.1.0"
description = ""
authors = ["Gerardo Gonzalez <gerardmga@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
email-validator = "^1.2.1"
pydantic = "1.10.12"
sqlalchemy = "2.0.19"
alembic = "1.11.1"
boto3 = "1.28.15"

# requests = "^2.28.1"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
black = "^22.6.0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.3"
pytest-mock = "^3.8.2"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
